@@ -1,4 +1,4 @@
-/* RCSid $Id: otspecial.h,v 2.5 2003/06/27 06:53:22 greg Exp $ */
+/* RCSid $Id: otspecial.h,v 2.6 2003/12/31 01:50:02 greg Exp $ */
 /*
  * Special type flags for objects used in rendering.
  * Depends on definitions in otypes.h
@@ -11,6 +11,9 @@ extern "C" {
 
 		/* flag for materials to ignore during irradiance comp. */
 #define  T_IRR_IGN	T_SP1
+
+		/* flag for completely opaque materials */
+#define  T_OPAQUE       T_SP2
 
 #define  irr_ignore(t)	(ofun[t].flags & T_IRR_IGN)
 
